--- a/.settings/org.eclipse.jpt.core.prefs
+++ b/.settings/org.eclipse.jpt.core.prefs
@@ -1,6 +1,6 @@
 eclipse.preferences.version=1
-org.eclipse.jpt.core.platform=com.google.appengine.eclipse.wtp.jpa.GaePlatform
-org.eclipse.jpt.jpa.core.discoverAnnotatedClasses=false
+org.eclipse.jpt.core.platform=generic2_0
+org.eclipse.jpt.jpa.core.discoverAnnotatedClasses=true
 problem.ASSOCIATION_OVERRIDE_INVALID_NAME=error
 problem.ATTRIBUTE_OVERRIDE_DERIVED_AND_SPECIFIED=error
 problem.ATTRIBUTE_OVERRIDE_INVALID_NAME=error
